--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,22 @@ whoosh = ">=2.7.4,<2.8.0"
 whooshalchemy = ">=0.3.1,<0.4.0"
 
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.12.0"
+black = "^23.9.1"
+pre-commit = "^3.4.0"
+autoflake = "1.6.0"
+flake8 = "4.0.1"
+wemake-python-styleguide = "0.17.0"
+
+[tool.isort]
+profile = "black"
+py_version = 311
+combine_as_imports = true
+no_lines_before = "LOCALFOLDER"
+reverse_relative = true
+line_length = 88
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
