--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flask-fullstack"
-version = "0.5.5"
+version = "0.5.6"
 description = "A utility package for projects using flask, sqlalchemy, socketio and pytest"
 authors = ["niqzart <niqzart@gmail.com>"]
 readme = "README.md"
@@ -25,7 +25,7 @@ pydantic = ">=2.0,<3.0"
 sqlalchemy = ">=1.4.31,<3.0.0"
 whoosh = ">=2.7.4,<2.8.0"
 whooshalchemy = ">=0.3.1,<0.4.0"
-pydantic-marshals = "^0.2.1"
+pydantic-marshals = ">=0.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
